try safari flicker fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@
   --bg-primary: #23232e;
   --bg-secondary: #141418;
   --transition-speed: 600ms;
+  --webkit-backface-visibility: hidden;
 }
 
 @keyframes slideInFromLeft {
